[gd_scene load_steps=14 format=3 uid="uid://b4cccx6ecghd6"]

[ext_resource type="Script" path="res://screens/end_scene/end_screen.gd" id="1_7tf0q"]
[ext_resource type="FontFile" uid="uid://c5yyu0axuj3vo" path="res://assets/fonts/Jersey20-Regular.ttf" id="2_gf6t8"]
[ext_resource type="Texture2D" uid="uid://dnioyk0iwrrkc" path="res://assets/cut_scenes/outtro1.png" id="2_sfn1c"]
[ext_resource type="Texture2D" uid="uid://uuya1tv827r6" path="res://assets/cut_scenes/outtro2.png" id="3_jnbik"]
[ext_resource type="Texture2D" uid="uid://bhpm0hy0kebvx" path="res://assets/cut_scenes/outtro3.png" id="4_nt0yc"]
[ext_resource type="Texture2D" uid="uid://dssmhyyoc8tkm" path="res://assets/cut_scenes/outtro4.png" id="5_eiqkr"]
[ext_resource type="Texture2D" uid="uid://d3x1et1g48u8a" path="res://assets/cut_scenes/outtro5.png" id="6_wcs8b"]
[ext_resource type="Texture2D" uid="uid://y3su6453uoru" path="res://assets/cut_scenes/outtro6.png" id="7_3srgl"]
[ext_resource type="Texture2D" uid="uid://vywy6eni23be" path="res://assets/cut_scenes/outtro7.png" id="8_eqhmq"]
[ext_resource type="Texture2D" uid="uid://cd0iee7xdnghv" path="res://assets/cut_scenes/outtro8.png" id="9_qbax2"]
[ext_resource type="Texture2D" uid="uid://bvryk8cavku35" path="res://assets/cut_scenes/outtro9.png" id="10_d6h5o"]
[ext_resource type="Texture2D" uid="uid://xm4slaefeghq" path="res://assets/cut_scenes/outtro10.png" id="11_grwae"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qepwf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_grwae")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sfn1c")
}, {
"duration": 1.0,
"texture": ExtResource("3_jnbik")
}, {
"duration": 1.0,
"texture": ExtResource("4_nt0yc")
}, {
"duration": 1.0,
"texture": ExtResource("5_eiqkr")
}, {
"duration": 1.0,
"texture": ExtResource("6_wcs8b")
}, {
"duration": 1.0,
"texture": ExtResource("7_3srgl")
}, {
"duration": 1.0,
"texture": ExtResource("8_eqhmq")
}, {
"duration": 1.0,
"texture": ExtResource("9_qbax2")
}, {
"duration": 1.0,
"texture": ExtResource("10_d6h5o")
}, {
"duration": 1.0,
"texture": ExtResource("11_grwae")
}],
"loop": false,
"name": &"play",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sfn1c")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[node name="main_menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7tf0q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="intro_cut_scene" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="intro_cut_scene"]
sprite_frames = SubResource("SpriteFrames_qepwf")
animation = &"play"
centered = false

[node name="main_menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0015625
anchor_top = 0.585417
anchor_right = 1.00156
anchor_bottom = 1.58542
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="Label" type="Label" parent="main_menu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gf6t8")
theme_override_font_sizes/font_size = 64
text = "Thanks for Playing "
horizontal_alignment = 1

[node name="Button" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gf6t8")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="intro_cut_scene/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="main_menu/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer1" to="." method="_on_timer_1_timeout"]
